[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "feed-seeker"
version = "1.1.0"
authors = [
    {name = "Colin Carroll", email = "ccarroll@mit.edu"},
]
description = "Find rss, atom, xml, and rdf feeds on webpages"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "beautifulsoup4>=4.6.0",
    "lxml>=4.1.1",
    "requests>=2.18.4",
    "publicsuffix>=1.1.0",
    "urllib3>=1.24.1",
    "pytest==4.5.0",
    "responses>=0.10.6",
    "typing>=3.6.6"
]

[project.optional-dependencies]
test = [
    "pytest", "pytest-cov"
]

[project.urls]
"Homepage" = "https://mediacloud.org"